--- a/services/entity-template/entity-template-service/src/main/resources/i18n/messages_zh_CN.properties
+++ b/services/entity-template/entity-template-service/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,2 +1,7 @@
-entity-template-service.entity.status.online=在线
-entity-template-service.entity.status.offline=离线
+entity-template-service.entity.status.name=状态
+entity-template-service.entity.status.attributes.enum.online=在线
+entity-template-service.entity.status.attributes.enum.offline=离线
+entity-template-service.entity.location.name=位置
+entity-template-service.entity.address.name=地址
+entity-template-service.entity.longitude.name=经度
+entity-template-service.entity.latitude.name=纬度
