--- a/services/entity-template/entity-template-service/src/main/resources/i18n/messages.properties
+++ b/services/entity-template/entity-template-service/src/main/resources/i18n/messages.properties
@@ -2,6 +2,6 @@ entity-template-service.entity.status.name=Status
 entity-template-service.entity.status.attributes.enum.online=Online
 entity-template-service.entity.status.attributes.enum.offline=Offline
 entity-template-service.entity.location.name=Location
-entity-template-service.entity.address.name=Address
-entity-template-service.entity.longitude.name=Longitude
-entity-template-service.entity.latitude.name=Latitude
+entity-template-service.entity.location.children.address.name=Address
+entity-template-service.entity.location.children.longitude.name=Longitude
+entity-template-service.entity.location.children.latitude.name=Latitude
